--- a/README
+++ b/README
@@ -122,4 +122,5 @@ Difficulties
 - Using new tools and new commands to compile the script and make it work
 - Code in a new environment and a new paradigm
 - Testing the code using utop, but we figure it out in the end.
+- Testing in section 10.
 
