--- a/README
+++ b/README
@@ -17,6 +17,7 @@ Sources
 -------
 
 Git repository: https://github.com/Dahbani1/Compilation-project
+A pdf containing answers to the non-code-related questions.
 
 ===============
 
